# MyTainManager

./: CMakeLists.txt  README.md  Traindatabase.db  addtrain.cpp  addtrain.h  addtrain.ui  admin.cpp  admin.h  admin.ui  buyticket.cpp  buyticket.h  buyticket.ui  dbheader.h  deletetrain.cpp  deletetrain.h  deletetrain.ui  findtrain.cpp  findtrain.h  findtrain.ui  imgs.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  manageadmin.cpp  manageadmin.h  manageadmin.ui  modifytrain.cpp  modifytrain.h  modifytrain.ui  nextpage.cpp  nextpage.h  nextpage.ui  searchticket.cpp  searchticket.h  searchticket.ui  seatavailability.cpp  seatavailability.h  seatavailability.ui  user.cpp  user.h  (+1 more)
